overall: fix some small layout issues

--- a/src/scss/_404.scss
+++ b/src/scss/_404.scss
@@ -3,7 +3,6 @@
   font-size: 106px;
   font-weight: 800;
   margin: 70px 15px;
-  margin-top: 20%;
 }
 .error-container > span {
   display: inline-block;
